--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,23 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+argon2 = "0.5.3"
 askama = "0.12.1"
 askama_axum = "0.4.0"
 axum = "0.7.5"
+axum-extra = { version = "0.9.3", features = ["cookie"] }
+base64 = "0.22.1"
+chrono = { version = "0.4.38", features = ["serde"] }
+dotenv = "0.15.0"
+jsonwebtoken = "9.3.0"
+rand_core = { version = "0.6.4", features = ["getrandom"] }
+redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
 serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "time", "uuid"] }
+time = "0.3.36"
 tokio = { version = "1.38.0", features = ["full"] }
+tower-http = { version = "0.5.2", features = ["cors"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+uuid = { version = "1.10.0", features = ["serde", "v4"] }
