--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   postgres:
     image: postgres:14.1
     restart: unless-stopped
+    ports:
+      - "6500:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file:
