added follower test and scrum

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "time", "uuid"] }
+strum = "0.26.3"
+strum_macros = "0.26.4"
 time = "0.3.36"
 tokio = { version = "1.38.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
