--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ strum = "0.26.3"
 strum_macros = "0.26.4"
 time = "0.3.36"
 tokio = { version = "1.38.0", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["cors"] }
+tower-http = { version = "0.5.2", features = ["cors", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
