--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,48 @@ services:
       context: .
       target: final
     ports:
-      - 5000:5000
+      - 7000:7000
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+
+  postgres:
+    image: postgres:14.1
+    restart: unless-stopped
+    # ports:
+      # - "6500:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    env_file:
+      - .env
+    healthcheck:
+      test: [ "CMD", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  pgAdmin:
+    image: dpage/pgadmin4
+    env_file:
+      - .env
+    # ports:
+    #   - "5050:80"
+    depends_on:
+      - postgres
+
+  redis:
+    image: redis:alpine
+    # ports:
+    #   - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+volumes:
+  postgres-data:
+  redis-data:
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
