--- a/compose.yaml
+++ b/compose.yaml
@@ -36,14 +36,14 @@ services:
       timeout: 5s
       retries: 5
 
-  pgAdmin:
-    image: dpage/pgadmin4
-    env_file:
-      - .env
-    # ports:
-    #   - "5050:80"
-    depends_on:
-      - postgres
+  # pgAdmin:
+  #   image: dpage/pgadmin4
+  #   env_file:
+  #     - .env
+  #   # ports:
+  #   #   - "5050:80"
+  #   depends_on:
+  #     - postgres
 
   redis:
     image: redis:alpine
