--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     ports:
       - 7000:8000
     env_file:
-      - .env
+      - ${ENV_FILE}
     depends_on:
       postgres:
         condition: service_healthy
@@ -29,7 +29,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file:
-      - .env
+      - ${ENV_FILE}
     healthcheck:
       test: [ "CMD", "pg_isready" ]
       interval: 10s
@@ -39,7 +39,7 @@ services:
   # pgAdmin:
   #   image: dpage/pgadmin4
   #   env_file:
-  #     - .env
+  #     - ${ENV_FILE}
   #   # ports:
   #   #   - "5050:80"
   #   depends_on:
