demo env files and compose file created

--- a/.env_demo
+++ b/.env_demo
@@ -14,7 +14,7 @@ PGADMIN_DEFAULT_PASSWORD=password123
 
 DATABASE_URL=postgresql://admin:password123@postgres:5432/dancertest_db?schema=public
 
-PORT=8000
+SERVER_PORT=8000
 CLIENT_ORIGIN=http://localhost:3000
 
 REDIS_URL=redis://redis:6379/
