--- a/.env_prod
+++ b/.env_prod
@@ -13,7 +13,9 @@ PGADMIN_DEFAULT_PASSWORD=password123
 
 DATABASE_URL=postgresql://admin:password123@postgres:5432/dancertest_db?schema=public
 
-PORT=8000
+SERVER_PORT=8000
+DOCKER_PORT_MAPPING=7000
+COMPOSE_PROJECT_NAME=dancexam-prod
 CLIENT_ORIGIN=http://localhost:3000
 
 REDIS_URL=redis://redis:6379/
