parse test refactor 3/4 complete

--- a/leader_test.yaml
+++ b/leader_test.yaml
@@ -1,64 +1,67 @@
 metadata:
   test_name: "Standard Leader Test"
+  test_type: "leader"
   minimum_percent: 0.60
-  max_score: 20
+  max_score: 23
 
-sections:
-  - name: "Leader Pattern Scoring"
-    scoring_categories:
-      - name: "Footwork"
-        values: ["Perfect", "Variation?", "Right Concept", "Nope"]
-      - name: "Timing"
-        values: ["On", "Off"]
-    items_to_be_graded:
-      - name: "Starter Step"
-        scores: 
-          - [3, 2, 1, 0]
-          - [1, 0]
-        failing_score_labels: 
-          - scoring_category_name: "Footwork"
-            values: ["Nope"]
-      - name: "Left Side Pass from Closed"
-        scores: 
-          - [3, 2, 1, 0]
-          - [1, 0]
+tables:
+  - sections:
+    - name: "Leader Pattern Scoring"
+      scoring_categories:
+        - name: "Footwork"
+          values: ["Perfect", "Variation?", "Right Concept", "Nope"]
+        - name: "Timing"
+          values: ["On", "Off"]
+      competencies:
+        - name: "Starter Step"
+          scores: 
+            - [3, 2, 1, 0]
+            - [1, 0]
+          failing_score_labels: 
+            - scoring_category_name: "Footwork"
+              values: ["Nope"]
+        - name: "Left Side Pass from Closed"
+          scores: 
+            - [3, 2, 1, 0]
+            - [1, 0]
 
-  - name: "Technique Scoring"
-    scoring_categories:
-      - name: ""
-        values: ["Consistent >90%", "Present 75%", "Occasional 50%", "Lacking 25%", "Missing <10%"]
-    items_to_be_graded: 
-      - name: "Body Lead"
-        subtext: "(Week 1)"
-        scores: 
-          - [8, 6, 0, 0, 0]
-        failing_score_labels: 
-          - scoring_category_name: ""
-            values: ["Missing <10%"]
-        antithesis: "Arm Lead"
-      - name: "Post"
-        subtext: "(Week 2)"
-        scores: 
-          - [6, 4, 0, 0, 0]
-        failing_score_labels: 
-          - scoring_category_name: ""
-            values: ["Missing <10%"]
-        antithesis: "Arm Lead"
+  - sections:
+    - name: "Technique Scoring"
+      scoring_categories:
+        - name: ""
+          values: ["Consistent >90%", "Present 75%", "Occasional 50%", "Lacking 25%", "Missing <10%"]
+      competencies: 
+        - name: "Body Lead"
+          subtext: "(Week 1)"
+          scores: 
+            - [8, 6, 0, 0, 0]
+          failing_score_labels: 
+            - scoring_category_name: ""
+              values: ["Missing <10%"]
+          antithesis: "Arm Lead"
+        - name: "Post"
+          subtext: "(Week 2)"
+          scores: 
+            - [6, 4, 0, 0, 0]
+          failing_score_labels: 
+            - scoring_category_name: ""
+              values: ["Missing <10%"]
+          antithesis: "Arm Lead"
 
-  - name: ""
-    scoring_categories:
-      - name: ""
-        values: ["Perpendicular", "Over-Angled", "Angled", "Under-Angled", "Flat"]
-    items_to_be_graded:
-      - name: "Body Angle"
-        subtext: "(Week 1)"
-        scores: 
-          - [0, 2, 3, 2, 0]
-        failing_score_labels: 
-          - scoring_category_name: ""
-            values: ["Perpendicular", "Flat"]
+    - name: ""
+      scoring_categories:
+        - name: ""
+          values: ["Perpendicular", "Over-Angled", "Angled", "Under-Angled", "Flat"]
+      competencies:
+        - name: "Body Angle"
+          subtext: "(Week 1)"
+          scores: 
+            - [0, 2, 3, 2, 0]
+          failing_score_labels: 
+            - scoring_category_name: ""
+              values: ["Perpendicular", "Flat"]
 
-bonus_section: 
+bonus_items: 
   - name: "No Thumbs"
     score: 1
   - name: "Clear Turn Signal"
