--- a/test_definitions.yaml
+++ b/test_definitions.yaml
@@ -28,42 +28,72 @@ tests:
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Sugar Tuck"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Cutoff Whip"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Left Side Pass"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Whip"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Sugar Push"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Spinning Side Pass"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Right Side Pass"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Basket Whip"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Free Spin"
               scores: 
                 - [3, 2, 1, 0]
                 - [1, 0]
+              failing_score_labels: 
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
 
       - sections:
         - name: "Technique Scoring"
@@ -77,7 +107,7 @@ tests:
                 - [8, 6, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Arm Lead"
             - name: "Post"
               subtext: "(Week 1)"
@@ -85,7 +115,7 @@ tests:
                 - [6, 4, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Floating Anchor"
             - name: "Strong Frame"
               subtext: "(Week 2)"
@@ -93,7 +123,7 @@ tests:
                 - [6, 4, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Weak Frame"
             - name: "Closed Connection"
               subtext: "(Week 3/4)"
@@ -101,7 +131,7 @@ tests:
                 - [4, 3, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Free Hand Only"
             - name: "Connection Transition"
               subtext: "(Week 2 - Dimmer Switch)"
@@ -109,28 +139,28 @@ tests:
                 - [4, 3, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Brick Wall (Toggle Switch)"
             - name: "On Time"
               scores: 
                 - [8, 6, 0, 0 ,0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Off Time"
             - name: "Move Off Slot"
               scores: 
                 - [4, 3, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "In the Way"
             - name: "Safe"
               scores: 
                 - [8, 0, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Unsafe"
 
         - name: ""
@@ -157,7 +187,7 @@ tests:
                 - [0, 2, 3, 0, 0]
               failing_score_labels:
                 - scoring_category_name: ""
-                  values: ["No-Prep"]
+                  values: ["No-Prep", "Overkill-Prep"]
 
     bonus_items: 
       - name: "No Thumbs"
@@ -203,21 +233,33 @@ tests:
                 - [2, 1, 0]
                 - [1, 0]
                 - [1, 0]
+              failing_score_labels:
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Whip"
               scores:
                 - [2, 1, 0]
                 - [1, 0]
                 - [1, 0]
+              failing_score_labels:
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Spinning Side Pass"
               scores:
                 - [2, 1, 0]
                 - [1, 0]
                 - [1, 0]
+              failing_score_labels:
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
             - name: "Sugar Push"
               scores:
                 - [2, 1, 0]
                 - [1, 0]
                 - [1, 0]
+              failing_score_labels:
+                - scoring_category_name: "Footwork"
+                  values: ["Nope"]
 
       - sections:
         - name: "Technique Scoring"
@@ -231,7 +273,7 @@ tests:
                 - [8, 5, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Weak Frame"
             - name: "Post"
               subtext: "(Week 2)"
@@ -239,7 +281,7 @@ tests:
                 - [6, 4, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Floating Anchor"
             - name: "Anchor in 3rd Position"
               subtext: "(Week 2)"
@@ -247,7 +289,7 @@ tests:
                 - [8, 0, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Rock Step"
             - name: "Stretch"
               subtext: "(Week 1/2)"
@@ -255,7 +297,7 @@ tests:
                 - [6, 4, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Over Eager"
             - name: "Variable Speed"
               subtext: "(Week 1)"
@@ -268,7 +310,7 @@ tests:
                 - [8, 5, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Brick Wall (Toggle Switch)"
             - name: "Connection Hierarchy"
               subtext: "(Week 4)"
@@ -276,7 +318,7 @@ tests:
                 - [6, 4, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Panic"
             - name: "Directionality"
               subtext: "(Week 1/3)"
@@ -284,7 +326,7 @@ tests:
                 - [6, 4, 0, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Directionless"
             - name: "Kissing Connection"
               subtext: "(Week 3)"
@@ -292,22 +334,31 @@ tests:
                 - [6, 4, 2, 0, 0]
               failing_score_labels: 
                 - scoring_category_name: ""
-                  values: ["Missing <10%"]
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Disconnected"
             - name: "Spins"
               subtext: "(Week 3)"
               scores:
                 - [4, 3, 0, 0, 0]
+              failing_score_labels: 
+                - scoring_category_name: ""
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%"]
               antithesis: "Unbalanced"
             - name: "Personal Safety"
               subtext: ""
               scores:
                 - [8, 5, 0, 0, 0]
+              failing_score_labels: 
+                - scoring_category_name: ""
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%", "Present 75%"]
               antithesis: "Masochist"
             - name: "Partner Safety"
               subtext: ""
               scores:
                 - [8, 0, 0, 0, 0]
+              failing_score_labels: 
+                - scoring_category_name: ""
+                  values: ["Missing <10%", "Lacking 25%", "Occasional 50%", "Present 75%"]
               antithesis: "Abusive"
 
         - name: ""
