--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ argon2 = "0.5.3"
 askama = "0.12.1"
 askama_axum = "0.4.0"
 axum = "0.7.5"
-axum-extra = { version = "0.9.3", features = ["cookie"] }
+axum-extra = { version = "0.9.4", features = ["cookie", "query"] }
 base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
