Bug Fix: Remove native-tls dependency from reqwest to enable docker image build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ lettre = { version = "0.11.9", default-features = false, features = ["smtp-trans
 oauth2 = "5.0.0"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 serde_yaml = "0.9.34"
